# oni-world-filter

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh-CN.md  dev-web.bat  filter.json  package.json  pixi.toml  run-batch-benchmark.ps1  tsconfig.web.json  webpack.config.ts
asset/templates/bases/: forestBase.json  sandstoneBase.json
asset/templates/geysers/: big_volcano.json  chlorine_gas.json  chlorine_gas_cool.json  filthy_water.json  generic.json  hot_co2.json  hot_hydrogen.json  hot_po2.json  hot_steam.json  hot_water.json  liquid_co2.json  (+11 more)
asset/worldgen/: borders.json  defaults.json  layers.json  mobs.json  rivers.json  rooms.json  temperatures.json
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: geyserOrdering.test.ts  previewStoreState.test.ts  searchAnalysisDisplay.test.ts  searchProbabilityFormat.test.ts  searchResultsState.test.ts  searchStoreState.test.ts  searchWarningPolicy.test.ts  sidecarListenerRegistry.test.ts  tauriUiIntegration.test.ts  verify-display-name-coverage.mjs  verify-geyser-summary.mjs  worldAndGeyserDisplayNames.test.ts  worldParameterUi.test.ts  zoneDisplayNames.test.ts
desktop/src/: main.tsx
desktop/tests/: antdTheme.test.ts  coordPreviewFlow.test.ts  coordPreviewState.test.ts  coordQuickSearchUi.test.ts  exportWorldReport.test.ts  geyserConstraintOptions.test.ts  geyserConstraintStateMachine.test.ts  geyserListHoverPopover.test.ts  geyserParameterPopover.test.ts  nativeCoordValidation.test.ts  previewGeyserDetailsState.test.ts  previewPalette.test.ts  previewPngExport.test.ts  previewReportFlow.test.ts  previewUiChunk4.test.ts  previewViewportResizePolicy.test.ts  previewWorldSwitchState.test.ts  previewWorldSwitchUi.test.ts  primaryTraitSupport.test.ts  renderPreviewReportImage.test.ts  resultsUiChunk3.test.ts  searchCancelState.test.ts  searchConstraintAlerts.test.ts  searchSchema.test.ts  searchStoreEventBinding.test.ts  searchStorePersistence.test.ts  searchUiChunk2.test.ts  traitConstraintRules.test.ts  worldProfileRequestState.test.ts  worldReportHtml.test.ts  worldReportViewModel.test.ts
docs/api/: geyser-parameter-algorithm.md
docs/api-guides/: 星球特质中文名称对照表.md
scripts/: build-desktop.ps1  dev-desktop.bat  dev-desktop.ps1  dev-web.bat  tauri-before-build.ps1  tauri-before-dev.ps1  verify-desktop-release.ps1
scripts/bench/: run-batch-benchmark.ps1  run-thread-policy-benchmark.ps1
scripts/lib/: desktop-bootstrap.ps1
scripts/smoke/: run-sidecar-analysis-latency.ps1  run-sidecar-cancel-latency.ps1  run-sidecar-consistency-check.ps1  run-sidecar-search-scale.ps1  run-sidecar-search-start-latency.ps1  run-sidecar-search-worker-ramp.ps1  run-tauri-preview.ps1  run-tauri-search.ps1
scripts/tests/: desktopPackagingConfig.test.mjs
src/: CMakeLists.txt  JsonDeserializeGen.hpp  TemplateSpawning.cpp  WorldGen.cpp  WorldGen.hpp  config.h.in  entry_cli.cpp  entry_sidecar.cpp  entry_wasm.cpp  generated-wasm-files.d.ts  index.html  index.tsx  main.cpp  types.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: nsis-hooks.nsh
src-tauri/src/: app_paths.rs  commands.rs  control_sidecar.rs  diagnostics.rs  error.rs  main.rs  report_pdf.rs  sidecar.rs  state.rs
src/App/: AppRuntime.cpp  AppRuntime.hpp  BatchCaptureSink.cpp  ResultModels.hpp  ResultSink.hpp  SettingsAsset.cpp  SettingsAsset.hpp  WasmResultSink.cpp
src/Batch/: BatchMatcher.cpp  BatchMatcher.hpp  BatchSearchService.cpp  BatchSearchService.hpp  CpuTopology.cpp  CpuTopology.hpp  DesktopSearchPolicy.cpp  DesktopSearchPolicy.hpp  DesktopSearchRuntimeMode.hpp  FilterConfig.cpp  FilterConfig.hpp  SearchEvents.hpp  SearchRequest.hpp  SessionWarmupPlanner.cpp  SessionWarmupPlanner.hpp  SidecarProtocol.cpp  SidecarProtocol.hpp  ThreadPolicy.cpp  ThreadPolicy.hpp  ThroughputCalibration.cpp  ThroughputCalibration.hpp
src/BatchCpu/: CpuOptimization.cpp  CpuOptimization.hpp  SearchCpuGovernor.cpp  SearchCpuGovernor.hpp  SearchCpuPlan.cpp  SearchCpuPlan.hpp
src/Cluster/: ClusterWorldOffsetSolver.cpp  ClusterWorldOffsetSolver.hpp
src/Geyser/: GeyserParameterCalculator.cpp  GeyserParameterCalculator.hpp  PreviewWorldOffsetPolicy.cpp  PreviewWorldOffsetPolicy.hpp
src/SearchAnalysis/: BottleneckSelectivityPredictor.cpp  BottleneckSelectivityPredictor.hpp  ExplainabilityBuilder.cpp  ExplainabilityBuilder.hpp  HardValidator.cpp  HardValidator.hpp  PoissonBinomial.cpp  PoissonBinomial.hpp  SearchCatalog.cpp  SearchCatalog.hpp  SearchConstraintModel.cpp  SearchConstraintModel.hpp  SearchConstraintNormalizer.cpp  SearchConstraintNormalizer.hpp  TraitCatalog.cpp  TraitCatalog.hpp  WorldEnvelopeProfile.cpp  WorldEnvelopeProfile.hpp
src/Setting/: ContentActivation.cpp  ContentActivation.hpp  NativeCoordinate.cpp  NativeCoordinate.hpp  SettingsCache.cpp  SettingsCache.hpp  World.hpp  WorldEffectiveState.cpp  WorldEffectiveState.hpp  WorldGenClasses.cpp  WorldGenClasses.hpp
src/Utils/: ConvexHull.cpp  Diagram.cpp  Diagram.hpp  Halfedge.cpp  KRandom.cpp  Polygon.cpp  Polygon.hpp  RecoverableDiagnostics.hpp  Vector2f.hpp  Voronoi.cpp
src/Utils/ConvexHull/: Algorithm.cpp  Algorithm.hpp
src/jsUtils/: configuration.ts  getresult.js  index.css  index.tsx  language.ts  mixings.tsx  navright.tsx  settings.tsx  toolbar.tsx  worldcanvas.tsx
tests/native/: test_adaptive_concurrency.cpp  test_app_runtime_worker_reset.cpp  test_batch_matcher.cpp  test_batch_search_smoke.cpp  test_cpu_topology.cpp  test_desktop_search_policy.cpp  test_filter_config.cpp  test_geyser_parameter_calculator.cpp  test_main.cpp  test_poisson_binomial.cpp  test_preview_world_session.cpp  test_recoverable_diagnostics.cpp  test_search_analysis.cpp  test_search_cpu_governor.cpp  test_search_cpu_plan.cpp  test_search_cpu_runtime.cpp  test_search_runtime_equivalence.cpp  test_session_warmup_planner.cpp  test_settings_cache.cpp  test_sidecar_protocol.cpp  test_sidecar_shutdown.cpp  test_sidecar_world_report.cpp  test_throughput_calibration.cpp  test_world_envelope_profile.cpp
(+893 files in other folders)
