[package]
name = "oni-world-filter"
version = "1.0.0"
description = "oni-world-filter desktop host"
authors = ["CommentOut64"]
license = "MIT"
edition = "2026"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Threading"] }
webview2-com = "0.38.2"
windows = "0.61"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
